--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry,drawing,places&key=AIzaSyCSN9cKqgukj5Y_Na0DpzyvtNIrfQ9SBe0"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
